<resources>
    <string name="app_name">ZolostaysSample</string>

    <!-- Strings related to login -->
    <string name="call_image">Call image</string>
    <string name="prompt_phno">PHONE NUMBER</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_login">Log In</string>
    <string name="action_forgot_password">Forgot password\?</string>
    <string name="action_create_account">create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phonenumber">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing phone
        completions."
    </string>
</resources>
