<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zoloBlue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tania.zolostayssample.ui.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/phone_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@drawable/zolostays"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@string/call_image"
                    android:src="@drawable/ic_call_white_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="271dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_phno"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@string/call_image"
                    android:src="@drawable/ic_vpn_key_white_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="271dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:maxLength="6"
                        android:drawableEnd="@drawable/ic_visibility_off_white_24dp"
                        android:textAllCaps="true"
                        android:textColor="@color/yellow"
                        android:textColorHint="@color/yellow" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="18dp"
                android:background="@color/yellow"
                android:text="@string/action_login"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/forgot_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_forgot_password"/>

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_create_account"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_create_account"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
